src/objects/EFT_Transaction_Status__c.object
<CustomObject>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesLookup</label>
        <referenceTo>SalesHeader__c</referenceTo>
        <relationshipLabel>EFT Transaction Status</relationshipLabel>
        <relationshipName>EFT_Transaction_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_status__c</fullName>
        <label>Transaction status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>EFT Transaction Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EFT Transaction Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFT Transaction Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>